metadata/force-app/main/default/objects/CustomName_AckqI__c/CustomName_AckqI__c.object-meta.xml
<CustomObject>
    <description>Description_hmWZE</description>
    <label>CustomLabel_ShViB</label>
    <nameField>
        <label>CustomLabel_ShViB</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_ShViBs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>