metadata/force-app/main/default/objects/CustomName_AckqI__c/fields/CustomField_WkEoW__c.field-meta.xml
<CustomField>
    <fullName>CustomField_WkEoW__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldmGtRT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>